@@ -176,16 +176,26 @@ Client::connect(size_t addressIndex)
 void
 Client::disconnect(const char* msg)
 {
-    m_connectOnResume = false;
-    cleanupTimer();
-    cleanupScreen();
-    cleanupConnecting();
-    cleanupConnection();
-    if (msg != NULL) {
+    cleanup();
+
+    if (msg) {
         sendConnectionFailedEvent(msg);
     }
     else {
         sendEvent(m_events->forClient().disconnected(), NULL);
+    }
+}
+
+void
+Client::refuseConnection(const char* msg)
+{
+    cleanup();
+
+    if (msg) {
+        auto info = new FailInfo(msg);
+        info->m_retry = true;
+        Event event(m_events->forClient().connectionRefused(), getEventTarget(), info, Event::kDontFreeData);
+        m_events->addEvent(event);
     }
 }
 
@@ -538,6 +548,16 @@ Client::setupTimer()
     m_events->adoptHandler(Event::kTimer, m_timer,
                             new TMethodEventJob<Client>(this,
                                 &Client::handleConnectTimeout));
+}
+
+void
+Client::cleanup()
+{
+    m_connectOnResume = false;
+    cleanupTimer();
+    cleanupScreen();
+    cleanupConnecting();
+    cleanupConnection();
 }
 
 void
